Improve the web app.

--- a/web/src/main/resources/index.html
+++ b/web/src/main/resources/index.html
@@ -5,6 +5,9 @@
     <title>Gutencraft</title>
 </head>
 <body>
+<h1>
+    <img src="book and quill.png" style="height: 1em;" alt="Book and Quill"/> Gutencraft
+</h1>
 <textarea id="input" rows="28" style="width: 40%;">
 </textarea>
 <br/>
