--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Gutencraft</title>
+    <link rel="shortcut icon" href="book and quill.png">
 </head>
 <body>
 <h1>
