--- a/web/src/main/resources/index.html
+++ b/web/src/main/resources/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Gutencraft</title>
-    <link rel="shortcut icon" href="book and quill.png">
+  <meta charset="UTF-8">
+  <title>Gutencraft</title>
+  <link rel="shortcut icon" href="book and quill.png">
 </head>
 <body>
 <h1>
-    <img src="book and quill.png" style="height: 1em;" alt="Book and Quill"/> Gutencraft
+  <img src="book and quill.png" style="height: 1em;" alt="Book and Quill"/> Gutencraft
 </h1>
 <textarea id="input" rows="28" style="width: 40%;">
 </textarea>
 <br/>
-<button id="print">
-    Print
+<button id="print_java">
+  Print for Java Edition
+</button>
+&nbsp;or&nbsp;
+<button id="print_bedrock">
+  Print for Bedrock Edition
 </button>
 <script src="web.js"></script>
 </body>
