--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Gutencraft</title>
     <link rel="shortcut icon" href="book and quill.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
 </head>
 <body>
 <h1>
